Add psutil to deps

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,6 +23,7 @@ requirements:
     - python >=3.8
     - numpy
     - opt-einsum
+    - psutil
     - scipy
     - pytorch >=1.11
     - typing-extensions
