--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,6 @@
 {% set name = "tad-mctc" %}
 {% set version = "0.2.5" %}
+{% set python_min = "3.8 %}
 
 package:
   name: {{ name|lower }}
@@ -16,11 +17,11 @@ build:
 
 requirements:
   host:
-    - python >=3.8,<3.13
+    - python {{ python_min }}
     - setuptools
     - pip
   run:
-    - python >=3.8,<3.13
+    - python >={{ python_min }}
     - numpy <2
     - opt-einsum
     - psutil
@@ -34,6 +35,7 @@ test:
   commands:
     - pip check
   requires:
+    - python {{ python_min }}
     - pip
 
 about:
