--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "tad-mctc" %}
 {% set version = "0.2.5" %}
-{% set python_min = "3.8 %}
+{% set python_min = "3.8" %}
 
 package:
   name: {{ name|lower }}
